It works on the example answer

--- a/Day_9/Makefile
+++ b/Day_9/Makefile
@@ -2,8 +2,16 @@ make clean:
 	rm *.o day9solution
 
 run:
-	g++ -O3 -std=c++17 Day9Aoc.cpp -o day9solution
-	./day9solution input.txt
+	g++ -O3 -std=c++17 day9.hpp day9.cpp Day9Aoc.cpp -o day9solution
+	./day9solution input.txt 0
+
+debug:
+	g++ -O3 -std=c++17 day9.hpp day9.cpp Day9Aoc.cpp -o day9solution
+	./day9solution input.txt 1
+
+debug_V:
+	g++ -O3 -std=c++17 day9.hpp day9.cpp Day9Aoc.cpp -o day9solution
+	./day9solution input.txt 2
 
 make:
 	g++ -O3 -std=c++17 Day9Aoc.cpp -o day9solution
