--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,9 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "utility": "cpp",
+        "unordered_set": "cpp",
+        "xhash": "cpp"
     }
 }
