--- a/Day_9/Makefile
+++ b/Day_9/Makefile
@@ -1,9 +1,9 @@
 make clean:
-	rm *.o day9solution
+	rm day9solution
 
 run:
 	g++ -O3 -std=c++17 day9.hpp day9.cpp Day9Aoc.cpp -o day9solution
-	./day9solution input.txt
+	./day9solution input.txt 10
 
 debug:
 	g++ -O3 -std=c++17 day9.hpp day9.cpp Day9Aoc.cpp -o day9solution
